Updated codebase and added icon at the main screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,8 @@
     </string-array>
 
     <string name="clouds">Clouds</string>
+    <string name="rain">Rain</string>
+    <string name="thunderstorm">Thunderstorm</string>
+    <string name="mist">Mist</string>
+    <string name="clear">Clear</string>
 </resources>
